GNOME Bugzilla – Bug 758820
glwindow: Fix memory leak of navigation thread
Last modified: 2015-12-21 10:31:04 UTC
Created attachment 316493 [details] [review] glwindow: Fix memory leak of navigation thread When application free glwindow object, glwindow will end the navigation thread in gst_gl_window_finalize(), but the thread resource hold by it hasn't been released yet. Need call g_thread_join() to release the resource hold by navigation thread to avoid memory leak. The patch add g_thread_join() after navigation thread exited.
Any update for this issue?
commit d81eea5de12077345fed67a344dc8ce8b97c52eb Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Dec 21 11:27:09 2015 +0100 glwindow: Hide navigation specific internal API and add API to asynchronously send navigation events Exposing the navigation thread's main context, GSourceFuncs and structs called key_event and mouse_event is exposing a bit too much of the internals. Let's just go with two functions to asynchronously send navigation events on the window with the same API as the synchronous ones. commit 0952b3f986fc40d81390052292714176eb6650de Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Dec 21 10:46:52 2015 +0100 glwindow: Use g_thread_join() instead of a custom condition variable for waiting for the navigation thread to finish Also hide some internal functions and fields while we're at it and fix a race condition with the startup condition variable. commit 62d79ae3266f6876a2c79ede52900e3c4d5dadcf Author: Haihua Hu <b55597@freescale.com> Date: Mon Nov 30 09:36:09 2015 +0800 glwindow: Fix memory leak of navigation thread When stopping the navigation thread, call g_thread_join() to release the resources hold by it. https://bugzilla.gnome.org/show_bug.cgi?id=758820